benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_Compare_NormalizeBitString_iter8_error.log
=== Verification Error - Iteration 8 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_Compare_NormalizeBitString.rs
Time: 2025-09-15 19:27:46

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Compare_NormalizeBitString_impl.rs:33:39
   |
33 |     1 + effective_start(s.subrange(1, s.len()))
   |                           --------    ^^^^^^^ expected `int`, found `nat`
   |                           |
   |                           arguments to this method are incorrect
   |
note: method defined here
  --> /Users/runner/work/verus/verus/source/vstd/seq.rs:114:26

error[E0308]: arguments to this method are incorrect
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Compare_NormalizeBitString_impl.rs:54:20
   |
54 |     let seq1 = s1@.subrange(starts1, s1@.len());
   |                    ^^^^^^^^ -------  --------- expected `int`, found `nat`
   |                             |
   |                             expected `int`, found `nat`
   |
note: method defined here
  --> /Users/runner/work/verus/verus/source/vstd/seq.rs:114:26

error[E0308]: arguments to this method are incorrect
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Compare_NormalizeBitString_impl.rs:55:20
   |
55 |     let seq2 = s2@.subrange(starts2, s2@.len());
   |                    ^^^^^^^^ -------  --------- expected `int`, found `nat`
   |                             |
   |                             expected `int`, found `nat`
   |
note: method defined here
  --> /Users/runner/work/verus/verus/source/vstd/seq.rs:114:26

error[E0369]: binary operation `==` cannot be applied to type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Compare_NormalizeBitString_impl.rs:61:17
   |
61 |         if seq1 == seq2 {
   |            ---- ^^ ---- vstd::seq::Seq<char>
   |            |
   |            vstd::seq::Seq<char>
   |
note: the foreign item type `vstd::seq::Seq<char>` doesn't implement `std::cmp::PartialEq`
  --> /Users/runner/work/verus/verus/source/vstd/seq.rs:31:1
   |
   = note: not implement `std::cmp::PartialEq`

error[E0369]: binary operation `<` cannot be applied to type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Compare_NormalizeBitString_impl.rs:63:24
   |
63 |         } else if seq1 < seq2 {
   |                   ---- ^ ---- vstd::seq::Seq<char>
   |                   |
   |                   vstd::seq::Seq<char>
   |
note: the foreign item type `vstd::seq::Seq<char>` doesn't implement `std::cmp::PartialOrd`
  --> /Users/runner/work/verus/verus/source/vstd/seq.rs:31:1
   |
   = note: not implement `std::cmp::PartialOrd`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0369.
For more information about an error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Compare_NormalizeBitString_impl.rs:33:39
   |
33 |     1 + effective_start(s.subrange(1, s.len()))
   |                           --------    ^^^^^^^ expected `int`, found `nat`
   |                           |
   |                           arguments to this method are incorrect
   |
note: method defined here
  --> /Users/runner/work/verus/verus/source/vstd/seq.rs:114:26

error[E0308]: arguments to this method are incorrect
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Compare_NormalizeBitString_impl.rs:54:20
   |
54 |     let seq1 = s1@.subrange(starts1, s1@.len());
   |                    ^^^^^^^^ -------  --------- expected `int`, found `nat`
   |                             |
   |                             expected `int`, found `nat`
   |
note: method defined here
  --> /Users/runner/work/verus/verus/source/vstd/seq.rs:114:26

error[E0308]: arguments to this method are incorrect
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Compare_NormalizeBitString_impl.rs:55:20
   |
55 |     let seq2 = s2@.subrange(starts2, s2@.len());
   |                    ^^^^^^^^ -------  --------- expected `int`, found `nat`
   |                             |
   |                             expected `int`, found `nat`
   |
note: method defined here
  --> /Users/runner/work/verus/verus/source/vstd/seq.rs:114:26

error[E0369]: binary operation `==` cannot be applied to type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Compare_NormalizeBitString_impl.rs:61:17
   |
61 |         if seq1 == seq2 {
   |            ---- ^^ ---- vstd::seq::Seq<char>
   |            |
   |            vstd::seq::Seq<char>
   |
note: the foreign item type `vstd::seq::Seq<char>` doesn't implement `std::cmp::PartialEq`
  --> /Users/runner/work/verus/verus/source/vstd/seq.rs:31:1
   |
   = note: not implement `std::cmp::PartialEq`

error[E0369]: binary operation `<` cannot be applied to type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Compare_NormalizeBitString_impl.rs:63:24
   |
63 |         } else if seq1 < seq2 {
   |                   ---- ^ ---- vstd::seq::Seq<char>
   |                   |
   |                   vstd::seq::Seq<char>
   |
note: the foreign item type `vstd::seq::Seq<char>` doesn't implement `std::cmp::PartialOrd`
  --> /Users/runner/work/verus/verus/source/vstd/seq.rs:31:1
   |
   = note: not implement `std::cmp::PartialOrd`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0369.
For more information about an error, try `rustc --explain E0308`.
